--- a/auctions.html
+++ b/auctions.html
@@ -61,7 +61,7 @@
     </div>
     <h4 class ='auction_item_title'> Firefox- Target 21 Spd.</h4>
     <div class='auction_item_image'>
-        <img src='public/images/firefox-target.png' title='Auction itme: Firefox bike' style="height: 300px">
+        <img src='public/images/firefox-target.png' title='Auction item: Firefox bike' style="height: 300px">
         <p class='bid_amount'>Current Bid <b class='yellowBackground'>$<span id='current_bid'>200</span></b></p>
     </div>
     <div class='bid_form'>
